--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.dianping.dpsf</groupId>
             <artifactId>dpsf-net</artifactId>
             <version>1.5.1</version>
