--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.dianping.swiftly</groupId>
+            <artifactId>swiftly-utils</artifactId>
+            <version>0.0.5-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.dianping.dpsf</groupId>
