--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.dianping</groupId>
+            <artifactId>mail-remote</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.dianping.dpsf</groupId>
             <artifactId>dpsf-net</artifactId>
             <version>1.5.1</version>
@@ -109,12 +115,6 @@
             <version>4.3</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.dianping</groupId>
-            <artifactId>shop-api</artifactId>
-            <version>0.3.30.17</version>
-            <type>jar</type>
-        </dependency>
 
         <dependency>
             <groupId>com.dianping</groupId>
